--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>guide-galaxy</groupId>
   <artifactId>guide-galaxy</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+  </dependencies>
 </project>
